--- a/hotel/build.gradle
+++ b/hotel/build.gradle
@@ -37,8 +37,11 @@ android {
 dependencies {
 
     implementation project(path:":main")
-    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.2.0-alpha01"
-    implementation "androidx.viewpager2:viewpager2:1.1.0-beta02"
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.2.0-alpha01'
+    implementation 'androidx.viewpager2:viewpager2:1.1.0-beta02'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
